--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "React Video Call",
-  "description": "React Video Call App powered by WebRTC, React and Socket.io",
-  "repository": "https://github.com/nguymin4/react-videocall",
+  "name": "urluploader",
+  "description": "simple url uploader by infinitrocyber",
+  "repository": "https://github.com/Nirmalraj10567/urluploderbotnodejs",
   "logo": "https://raw.githubusercontent.com/nguymin4/react-videocall/production/client/src/assets/icon1.png",
   "keywords": ["react", "express", "video call"]
 }
