--- a/app.json
+++ b/app.json
@@ -1,7 +1,10 @@
 {
-  "name": "urluploader",
-  "description": "simple url uploader by infinitrocyber",
-  "repository": "https://github.com/Nirmalraj10567/urluploderbotnodejs",
-  "logo": "https://raw.githubusercontent.com/nguymin4/react-videocall/production/client/src/assets/icon1.png",
-  "keywords": ["react", "express", "video call"]
+  "name": "torrent-aio-bot",
+  "description": "All in one bot for torrenting",
+  "repository": "https://github.com/patheticGeek/torrent-aio-bot",
+  "keywords": ["node", "express", "bot", "torrent", "automation"],
+  "builpacks": [
+    { "url": "heroku/nodejs" },
+    { "url": "https://github.com/jontewks/puppeteer-heroku-buildpack.git" }
+  ]
 }
